--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <!-- css file -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- favicon -->
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
 
-
+    <!-- title -->
     <title>3-column preview card component | Frontend Mentor</title>
 
 </head>
@@ -21,19 +23,19 @@
 
         <div class="flex-container">
             <div class="flex-item flex-item1" style="background-color: #E38525;">
-                <img src="/images/icon-sedans.svg" alt="Sedans Car">
+                <img src="images/icon-sedans.svg" alt="Sedans Car">
                 <h2>sedans</h2>
                 <p>Choose a sedan for its affordability and excellent fual economy. Ideal for cruising in the city or on your next road trip.</p>
                 <button>learn more</button>
             </div>
             <div class="flex-item flex-item2" style="background-color: #016871 ;">
-                <img src="/images/icon-suvs.svg" alt="Suvs Car">
+                <img src="images/icon-suvs.svg" alt="Suvs Car">
                 <h2>suvs</h2>
                 <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
                 <button>learn more</button>
             </div>
             <div class="flex-item flex-item3" style="background-color: #003F3E;">
-                <img src="/images/icon-luxury.svg" alt="Luxury Car">
+                <img src="images/icon-luxury.svg" alt="Luxury Car">
                 <h2>luxury</h2>
                 <p>Cruise in the best car brands without bloated prices. Enjoy the enganced comfort of a luxury rental and arrive in style.</p>
                 <button>learn more</button>
